--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: ${rootProject.name}
 version: ${rootProject.version}
 api-version: 1.17
-main: net.projecttl.peconomy.PBalance
+main: net.projecttl.pbalance.PBalance
 
 commands:
   pbalance:
