--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -9,3 +9,8 @@ commands:
     usage: /pbalance <option> <target_player> <amount>
     aliases:
       - money
+  exchanger:
+    description: This is exchanger command
+    usage: /exchanger
+    aliases:
+      - ex
