feat: change bukkit api for Paper and add bungee module

--- a/plugin/src/main/resources/plugin.yml
+++ b/plugin/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: ${rootProject.name}
-version: ${rootProject.version}
+version: ${project.version}
 api-version: 1.17
 main: net.projecttl.pbalance.PBalance
 
