--- a/plugin/src/main/resources/config.yml
+++ b/plugin/src/main/resources/config.yml
@@ -3,7 +3,7 @@ SQL_USERNAME: ""
 SQL_PASSWORD: ""
 SQL_PORT: 3306
 
-DATABASE: "project-work"
+SQL_DATABASE: "project_work"
 MONEY_UNIT: "₩"
 
 emerald_cost: 1000
