--- a/project-economy-plugin/src/main/resources/plugin.yml
+++ b/project-economy-plugin/src/main/resources/plugin.yml
@@ -2,3 +2,5 @@ name: ${rootProject.name}
 version: ${project.version}
 api-version: 1.18
 main: net.projecttl.economy.plugin.ProjectEconomy
+libraries:
+  - io.github.monun:kommand-core:2.11.0
